--- a/views/baseTemplate.pug
+++ b/views/baseTemplate.pug
@@ -7,6 +7,8 @@ html(lang='en')
 
         link(href='https://fonts.googleapis.com/css?family=Megrim|Nunito+Sans:400,900', rel='stylesheet')
         link(rel='stylesheet' href='/css/style.css')
-        title {%NAME%} {%IMAGE%} /// Course List
+        title #{title}
     body
+        include _header
         block content
+        include _footer
